Modifica_per_caricamento

--- a/public/css/style_prova.css
+++ b/public/css/style_prova.css
@@ -33,7 +33,7 @@
         width: 100%;
         height: 100%;
         text-align: center;
-        background-image: url("/media/ancona-4601.jpg");
+        background-image: url("../img/ancona-4601.jpg");
         background-position: center;
     }
     /*Contenuti*/
