--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,6 +63,6 @@ button{
 .main{
 
     height:100%;
-    background-image: url("/media/AM1506.jpg");
+    background-image: url("../img/AM1506.jpg");
     background-size: cover;
 }
