--- a/public/w3-style.css
+++ b/public/w3-style.css
@@ -1647,3 +1647,66 @@ a {
 .my-profile .my-margin{
     margin:10px;
 }
+.price{
+    
+    float: right;
+    font-size:110%;
+}
+.discounted{
+    color:rgb(39, 200, 39);
+}
+.dropdown{
+    position:relative;
+    
+}
+.dropdown:hover{
+    cursor:pointer;
+}
+.price .oldprice{
+    color:red;
+    font-size: 60%;
+    text-decoration: line-through;
+    margin-right: 5px;
+}
+.dropbtn {
+
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    display:flex;
+    align-items: center;
+  }
+  .profile-name{
+      margin:5px;
+  }
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #CCCCCC;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    float:right;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown a:hover {background-color: #CCCCCC;}
+  
+  .show {display: block;}
