--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1725,3 +1725,40 @@ a {
 .title{
     font-size:110%;
 }
+
+ul.social-media-list img {
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #fff;
+    width: 50px;
+    height: 50px;
+}
+ul.social-media-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 0px;
+}
+
+ul.social-media-list li {
+    display: inline-block;
+    margin: 2px;
+}
+
+ul.social-media-list img:hover {
+  background-color: #ccc;
+}
+
+.google-maps {
+  position: relative;
+  padding-bottom: 75%; /* Definisco l'aspect ratio */
+  height: 0;
+  overflow: hidden;
+}
+.google-maps > iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
