--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1822,3 +1822,17 @@ flex-direction: column;
     content: "\2796";
     /* Unicode character for "minus" sign (-) */
 }
+
+.parallax {
+  /* The image used */
+  background-image: url("../img/sfondo.png");
+
+  /* Set a specific height */
+  min-height: 500px; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
