--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1821,7 +1821,7 @@ flex-direction: column;
 
 .parallax {
   /* The image used */
-  background-image: url("../img/sfondo.png");
+  background-image: url("../img/sfondo_tagliato.png");
 
   /* Set a specific height */
   min-height: 500px; 
