--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -7,15 +7,13 @@ html {
 *:after {
     box-sizing: inherit;
 }
-/* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
-html {
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-}
-body {
-    margin: 0;
-}
 
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+body, html {
+  height: 100%;
+  color: #777;
+  line-height: 1.8;
+}
 area,
 article,
 aside,
@@ -27,7 +25,6 @@ header,
 main,
 map,
 menu,
-nav,
 section {
     display: block;
 }
@@ -1843,7 +1840,7 @@ flex-direction: column;
 
 
 /* Style sheet per home page in parallax */
-.bgimg-1, .bgimg-2, .bgimg-3 {
+.bgimg-1{
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -1853,28 +1850,10 @@ flex-direction: column;
   /* First image (Logo. Full height) */
   .bgimg-1 {
     background-image: url('../img/studenti.jpg');
-    min-height: 100%;
-  }
-  
-  /* Second image (Portfolio) */
-  .bgimg-2 {
-    background-image: url("/w3images/parallax2.jpg");
-    min-height: 400px;
-  }
-  
-  /* Third image (Contact) */
-  .bgimg-3 {
-    background-image: url("/w3images/parallax3.jpg");
-    min-height: 400px;
+    min-height: 60%;
+    min-width: 100%;
   }
   
   .w3-wide {letter-spacing: 10px;}
+
   .w3-hover-opacity {cursor: pointer;}
-  
-  /* Turn off parallax scrolling for tablets and phones */
-  @media only screen and (max-device-width: 1600px) {
-    .bgimg-1, .bgimg-2, .bgimg-3 {
-      background-attachment: scroll;
-      min-height: 400px;
-    }
-  }
