--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1873,3 +1873,66 @@ flex-direction: column;
       bottom: -70px;
     }
 
+    .container-form-btn {
+        width: 100%;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 5px;
+        }
+
+    .wrap-contact {
+    max-width: 960px;
+    background: #dbecf6;
+    border-radius: 2px;
+    padding: 30px 120px;
+    position: relative;
+    }
+
+
+
+    .wrap-contact1 {
+    max-width: 300px;
+    background: #ffffff;
+    border-radius: 2px;
+    padding: 30px 30px;
+    position: relative;
+    }
+
+    .container-contact {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 15px;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        }
+
+    .wrap-input {
+        width: 100%;
+        position: relative;
+        background-color: transparent;
+        margin-bottom: 12px;
+        }
+
+    .errors {
+            color: #f93d00;
+            font-size: 12px;
+            }
+                
+                
+                
+    .errors ul {
+            line-height: 100%;
+            }
