--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1841,7 +1841,7 @@ flex-direction: column;
     overflow: hidden;
     text-decoration: none;
     color: inherit;
-    background-color: inherit;
+    background-color: #e9e9e9;
     text-align: center;
     cursor: pointer;
     white-space: nowrap;
