--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1936,3 +1936,8 @@ flex-direction: column;
     .errors ul {
             line-height: 100%;
             }
+
+    .ruolo{
+        position: relative;
+        left: -24px;
+    }
