--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1835,7 +1835,7 @@ flex-direction: column;
 }
 
 .link-static{
-    background-color:#d0d0d0 ;
+    background-color:#ffffff ;
 }
 .my-button{
     position: relative;
