--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1701,7 +1701,7 @@ a {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #ffffff;
     min-width: 240px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -1709,6 +1709,7 @@ a {
   }
   
   .dropdown-content a {
+    float:none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
