--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1677,8 +1677,7 @@ a {
     margin-right: 5px;
 }
 .dropbtn {
-
-    padding: 16px;
+    padding: 11px 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -1699,10 +1698,15 @@ a {
   }
   
   .dropdown-content {
+    display: block;
+    cursor: auto;
+    color: #000;
+    background-color: #fff;
+    min-width: 160px;
+    margin: 0;
+    padding: 0;
     display: none;
     position: absolute;
-    background-color: #ffffff;
-    min-width: 240px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
