--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -415,7 +415,7 @@ a {
     background-color: #fff;
     display: none;
     position: absolute;
-    min-width: 160px;
+    width: 250px;
     margin: 0;
     padding: 0;
     z-index: 1;
@@ -2033,4 +2033,12 @@ img {vertical-align: middle;}
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
+}
+
+
+.profileButton{
+    width:250px;
+    display: flex;
+    align-items: center;
+    justify-content: center
 }
