--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1930,10 +1930,10 @@ transition: all 0.5s ease-in;
     }
 
 .wrap-contact {
-max-width: 960px;
+max-width: 1500px;
 background: #dbecf6;
 border-radius: 2px;
-padding: 30px 120px;
+padding: 30px 400px;
 position: relative;
 }
 
@@ -1998,7 +1998,7 @@ position: relative;
     }
 
 .rs1-wrap-input {
-        width: calc((100% - 30px) / 2);
+        width: 400px;
     }
 
 .form-btn1 {
@@ -2034,7 +2034,7 @@ position: relative;
         margin-top: 5px;
         }
 
-.coloroSfondo{
-    background-color:#000000;
+.affianco{
+    display: inline;
 
 }
