--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -2040,15 +2040,30 @@ position: relative;
 }
 
 /*css profilo*/
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            max-width: 300px;
-            margin: auto;
-            text-align: center;
-            font-family: arial;
-          }
-          
-          .title-profile{
-            color: grey;
-            font-size: 18px;
-          }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+}
+
+.title-profile{
+    color: grey;
+    font-size: 18px;
+}
+
+.column-card {
+    float: left;
+    width: 50%;
+    padding: 0 10px;
+  }
+
+.row-card {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row-card:after {
+  content: "";
+  display: table;
+  clear: both;
+}
