--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1983,6 +1983,7 @@ position: relative;
         line-height: 100%;
         }
 
+
 .ruolo{
     position: relative;
     left: -24px;
@@ -2022,12 +2023,11 @@ position: relative;
 .input-app {
         width: 90%;
         background: #f2f2f2;
-        border-radius: 10px;
+        border-radius: 2px;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 15px;
         color: #686868;
         padding: 5px;
-        text-align: center;
         -webkit-transition: all 0.4s;
         -o-transition: all 0.4s;
         -moz-transition: all 0.4s;
@@ -2039,6 +2039,31 @@ position: relative;
 }
 
 /*css profilo*/
+.label-input-error{
+    background-color: #f3e4e4;
+    border: solid 2px #ff0000;
+}
+.label-input-card{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    color: #555555;
+    line-height: 1,5;
+    }
+
+.input-card {
+    width: 90%;
+    background: #f2f2f2;
+    border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: #686868;
+    padding: 5px;
+    text-align: center;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+    }
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 350px;
