--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -2222,3 +2222,20 @@ textarea { resize:none;
   }
   
   .alert.success {background-color: #04AA6D;}
+
+  .box img {
+    width: 100%;
+    height: 100%;
+}
+
+.box1 img {
+    object-fit: cover;
+}
+
+.box2 img {
+    object-fit: contain;
+}
+
+.box3 img {
+    object-fit: fill;
+}
