--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -1853,7 +1853,7 @@ flex-direction: column;
 }
 .my-button{
     position: relative;
-    border: none;
+    border: 2px;
     display: inline-block;
     padding: 11px 16px;
     vertical-align: middle;
@@ -2226,7 +2226,9 @@ textarea { resize:none;
     margin-left: -77px;  
   }
 
-
+ .roundedcorners{
+    border-radius: 10px;
+ }
 /*alert button */
   .alert {
     padding: 20px;
@@ -2242,3 +2244,28 @@ textarea { resize:none;
   .accanto{
       display:"inline";
   }
+
+
+
+  .buttonAlloggio {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 10px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  
+
+  .buttonAlloggio1 {
+    background-color: white;
+    color: black;
+    border: 2px solid #e7e7e7;
+  }
+  
+  .buttonAlloggio1:hover {background-color: #e7e7e7;}
