--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -2393,3 +2393,42 @@ textarea {
     color: #555555;
     line-height: 1, 5;
 }
+/*CSS MESSAGE BOX*/
+
+.w3-sidebar-mess {
+    height: 800px;
+    width:auto;
+    background-color: #fff;
+    position: fixed !important;
+    z-index: 1;
+    overflow: auto;
+    left:25px
+}
+.w3-sidebar-mess .w3-collapse-mess {
+    display: block !important;
+}
+
+@media (max-width: 992px) {
+    .w3-sidebar-mess .w3-collapse-mess {
+        display: none;
+    }
+    .w3-main-mess {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+    .w3-auto-mess {
+        max-width: 100%;
+    }
+}
+
+.w3-bar-block-mess .w3-bar-item-mess {
+    width: 100%;
+    height:100px;
+    display: block;
+    padding: 11px 16px;
+    text-align: left;
+    border: none;
+    white-space: normal;
+    float: none;
+    outline: 0;
+}
