--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -445,16 +445,16 @@ a {
     z-index: 1;
     overflow: auto;
 }
-.w3-bar-block .w3-dropdown-hover,
-.w3-bar-block .w3-dropdown-click {
+.w3-bar-block w3-bar-block-mess .w3-dropdown-hover,
+.w3-bar-block w3-bar-block-mess .w3-dropdown-click {
     width: 100%;
 }
-.w3-bar-block .w3-dropdown-hover .w3-dropdown-content,
-.w3-bar-block .w3-dropdown-click .w3-dropdown-content {
+.w3-bar-block w3-bar-block-mess .w3-dropdown-hover .w3-dropdown-content,
+.w3-bar-block w3-bar-block-mess .w3-dropdown-click .w3-dropdown-content {
     min-width: 100%;
 }
-.w3-bar-block .w3-dropdown-hover .w3-button,
-.w3-bar-block .w3-dropdown-click .w3-button {
+.w3-bar-block w3-bar-block-mess .w3-dropdown-hover .w3-button,
+.w3-bar-block w3-bar-block-mess .w3-dropdown-click .w3-button {
     width: 100%;
     text-align: left;
     padding: 8px 16px;
@@ -521,7 +521,7 @@ a {
     float: none;
     outline: 0;
 }
-.w3-bar-block.w3-center .w3-bar-item {
+.w3-bar-block w3-bar-block-mess .w3-center .w3-bar-item {
     text-align: center;
 }
 .w3-block {
@@ -2435,6 +2435,10 @@ textarea {
     }
 }
 
+.w3-animate-left-mess {
+    position: relative;
+    animation: animateleft 0.4s;
+}
 .w3-bar-block-mess .w3-bar-item-mess {
     width: 100%;
     height:100px;
