--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -2425,3 +2425,13 @@ textarea {
     outline: 0;
 }
 
+#posto_letto{
+    display:none;
+}
+
+#alloggio{
+    display:none;
+}
+.mostra{
+    display:show !important;
+}
