--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -2428,3 +2428,29 @@ textarea {
 .mostra{
     display:show !important;
 }
+
+ul.pagination {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+
+ul.pagination li {display: inline;}
+
+ul.pagination li a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    border-radius: 5px;
+    position:relative;
+    top:-5px;
+}
+
+ul.pagination li a.activetor {
+    background-color: #4caf50;
+    color: white;
+    border-radius: 5px;
+}
+
+ul.pagination li a:hover:not(.activetor) {background-color: #ddd;}
