--- a/public/css/w3-style.css
+++ b/public/css/w3-style.css
@@ -2429,15 +2429,15 @@ textarea {
     display:show !important;
 }
 
-ul.pagination {
+div.pagination {
     display: inline-block;
     padding: 0;
     margin: 0;
 }
 
-ul.pagination li {display: inline;}
+div.pagination div {display: inline;}
 
-ul.pagination li a {
+div.pagination div a {
     color: black;
     float: left;
     padding: 8px 16px;
@@ -2447,10 +2447,10 @@ ul.pagination li a {
     top:-5px;
 }
 
-ul.pagination li a.activetor {
+div.pagination div a.activetor {
     background-color: #4caf50;
     color: white;
     border-radius: 5px;
 }
 
-ul.pagination li a:hover:not(.activetor) {background-color: rgb(167, 167, 167);}
+div.pagination div a:hover:not(.activetor) {background-color: rgb(167, 167, 167);}
